9974
Just dropping by to note a corner case with this:
```scala
% scala Yrepl-class-based
...
scala> class C(val a: Any) extends AnyVal
<console>:7: error: value class may not be a member of another class
       class C(val a: Any) extends AnyVal
             ^
```

Of course, it really depends which corner you are more comfortable in, as this one hangs in the default REPL and works here:
```scala
scala> { def x = 0; List(1).par.map(_ => x)}
res0: scala.collection.parallel.immutable.ParSeq[Int] = ParVector(0)
```
